<resources>
    <string name="app_name">GuessTheWordApp</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="random_text">Random Text</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="correct">Correct!</string>
    <string name="click_on_continue">Click on Continue</string>
    <string name="continueA">Continue</string>
</resources>