<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="#FFF3E0"
    android:orientation="vertical"
    android:padding="10dp">
    <!-- Top Section (Title) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFE0B2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/correct"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Message Below Title -->
    <TextView
        android:id="@+id/textContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/click_on_continue"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="30sp" />

    <!-- Continue Button -->
    <Button
        android:id="@+id/btnConfirmDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#FFCC80"
        android:text="@string/continueA" />
</LinearLayout>