<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2fb3c7"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvCorrectAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:padding="30dp"
        android:text="@string/correct_answer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvRightAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/tvQuestionContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/random_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/etUserInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/enter_your_text"
            android:inputType="text"
            android:padding="25dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#eb3939"
            android:padding="10dp"
            android:text="Show"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#C31E1E"
            android:padding="10dp"
            android:text="Check"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#eb3939"
            android:padding="10dp"
            android:text="Next"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:cornerRadius="5dp" />
    </LinearLayout>
</LinearLayout>